# zoonyper

./: .all-contributorsrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  conf.py  genindex.html  index.html  installing.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js
.github/workflows/: docs.yml
_sources/: installing.rst.txt  reference.rst.txt
_sources/getting-started/: introduction-to-zoonypers-data-structures.rst.txt
_sources/getting-started/tutorials/: counting-annotations.rst.txt  (+2 more)
dev-notebooks/: zooniverse-to-observable.ipynb  zoonyper-docs.ipynb
docs/: agreement.rst  comments.rst  data-structure.rst  disambiguation-deduplication.rst  downloading-subject-files.rst  import.rst  index.rst  install.rst  load.rst  participants.rst  reference.rst  timelines.rst
docs/doctrees/: README.doctree  environment.pickle
docs/html/: README.html  genindex.html  objects.inv  search.html  searchindex.js
docs/source/: conf.py  index.rst  install.rst
docs/tutorials/: create-lists-of-contributors.rst  index.rst  setting-up-a-project.rst
getting-started/: index.html  introduction-to-zoonypers-data-structures.html
getting-started/tutorials/: counting-annotations.html  handling-comments.html  index.html  loading-a-project.html  setting-up-your-first-project.html  working-with-workflows-and-tasks.html
tests/: test_project.py  test_zoonyper.py
tests/data/: classifications.csv  comments.json  subjects.csv  tags.json  workflows.csv
zoonyper/: __init__.py  log.py  project.py  utils.py
(+25 files in other folders)
