[tool.poetry]
name = "zoonyper"
version = "0.1.0"
description = ""
authors = ["Kalle Westerling <kalle.westerling@bl.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.4.1"
requests = "2.25.1"
furo = "^2022.4.7"
ipykernel = "^6.13.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
