[tool.poetry]
name = "zoonyper"
version = "0.1.0"
description = ""
authors = ["Kalle Westerling <kalle.westerling@bl.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.4.1"
requests = "2.25.1"
furo = "^2022.4.7"
tqdm = "^4.64.0"
ipywidgets = "^7.7.0"
spacy = "^3.2.4"
wasabi = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
