[tool.poetry]
name = "zoonyper"
version = "0.1.0"
description = ""
authors = ["Kalle Westerling <kalle.westerling@bl.uk>"]

[tool.poetry.dependencies]
python = "^3.8.10"
pandas = "1.4.1"
requests = "^2.25"
furo = "^2022.4.7"
tqdm = "^4.64.0"
ipywidgets = "^7.7.0"
spacy = "^3.2.4"
wasabi = "^0.9.1"
sphinx-rtd-theme = "^1.1.1"
sphinx-copybutton = "^0.5.1"
sphinx-togglebutton = "^0.3.2"
sphinx-hoverxref = "^1.3.0"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
